.metadata/.plugins/org.eclipse.cdt.ui/ClassNotes.build.log
10:34:09 **** Incremental Build of configuration Debug for project ClassNotes ****
make all 
Building file: ../src/Class Notes.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Class Notes.d" -MT"src/Class\ Notes.d" -o "src/Class Notes.o" "../src/Class Notes.cpp"
../src/Class Notes.cpp: In function ‘int main()’:
../src/Class Notes.cpp:21:7: error: expected unqualified-id before ‘<<’ token
   int << "L1 is now " << L1 << return 0;
       ^
../src/Class Notes.cpp:26:2: error: ‘count’ was not declared in this scope
  count << "L1 is now" << L1 << endl;
  ^
../src/Class Notes.cpp:30:2: error: ‘L3’ was not declared in this scope
  L3 = 5 * (L2 += 5) -2;
  ^
../src/Class Notes.cpp:56:18: warning: operation on ‘L1’ may be undefined [-Wsequence-point]
  L1 = L1++ + ++L1;
                  ^
../src/Class Notes.cpp:56:18: warning: operation on ‘L1’ may be undefined [-Wsequence-point]
../src/Class Notes.cpp:70:1: error: expected ‘}’ at end of input
 }
 ^
make: *** [src/Class Notes.o] Error 1

10:34:09 Build Finished (took 265ms)

